commit pom changes to sign all files for release to public repo

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
     </license>
   </licenses>
   <scm>
-    <url>https://github.com/gtxtreme21/PassFailReport</url>
-    <connection>https://github.com/gtxtreme21/PassFailReport</connection>
+    <url>http://github.com/gtxtreme21/PassFailReport</url>
+    <connection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</connection>
+	<developerConnection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</developerConnection>    
   </scm>
   <issueManagement>
   	<system>GitHub</system>
@@ -48,4 +49,32 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <profiles>
+	  <profile>
+	    <id>release-sign-artifacts</id>
+	    <activation>
+	      <property>
+	        <name>performRelease</name>
+	        <value>true</value>
+	      </property>
+	    </activation>  
+		  <build>
+		    <plugins>
+		      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-gpg-plugin</artifactId>
+		        <executions>
+		          <execution>
+		            <id>sign-artifacts</id>
+		            <phase>verify</phase>
+		            <goals>
+		              <goal>sign</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+		      </plugin>
+		    </plugins>
+		  </build>
+	   </profile>
+  </profiles>
 </project>
