--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
     <connection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</connection>
 	<developerConnection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</developerConnection>    
   </scm>
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <name>Nexus Staging Repo</name>
+      <url>scp://home/maven2/html</url>  
+    </repository>
+  </distributionManagement>  
   <issueManagement>
   	<system>GitHub</system>
   	<url>https://github.com/gtxtreme21/PassFailReport/issues</url>
