--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.jmeter</groupId>
   <artifactId>passfailreport-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <name>Jmeter PassFailReport</name>
   <description>A plugin that builds a simple report by reading Jmeter jtl result files with Maven.</description>
   <url>http://github.com/gtxtreme21/PassFailReport</url>
