--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.jmeter</groupId>
   <artifactId>passfailreport-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <name>Jmeter PassFailReport</name>
   <description>A plugin that builds a simple report by reading Jmeter jtl result files with Maven.</description>
   <url>http://github.com/gtxtreme21/PassFailReport</url>
@@ -17,7 +17,7 @@
   <scm>
     <connection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</connection>
 	<developerConnection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</developerConnection>
-	<url>git@github.com:gtxtreme21/PassFailReport.git</url>    
+	<url>http://github.com/gtxtreme21/PassFailReport.git</url>    
   </scm>
   <distributionManagement>
     <repository>
