commit after failed maven release

--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,15 @@
 #release configuration
-#Thu Aug 01 16:16:48 CDT 2013
-preparationGoals=clean verify
-scm.commentPrefix=[maven-release-plugin] 
-remoteTagging=true
-exec.additionalArguments=-Dgpg.passphrase\=gtshellno9
-completedPhase=check-poms
+#Thu Aug 01 16:19:01 CDT 2013
+scm.tag=passfailreport-maven-plugin-1.0
 scm.url=scm\:git\:git@github.com\:gtxtreme21/PassFailReport.git
+preparationGoals=clean verify
+project.dev.com.jmeter\:passfailreport-maven-plugin=1.1-SNAPSHOT
+project.scm.com.jmeter\:passfailreport-maven-plugin.tag=HEAD
+project.scm.com.jmeter\:passfailreport-maven-plugin.url=http\://github.com/gtxtreme21/PassFailReport.git
+project.rel.com.jmeter\:passfailreport-maven-plugin=1.0
+project.scm.com.jmeter\:passfailreport-maven-plugin.connection=scm\:git\:git@github.com\:gtxtreme21/PassFailReport.git
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+project.scm.com.jmeter\:passfailreport-maven-plugin.developerConnection=scm\:git\:git@github.com\:gtxtreme21/PassFailReport.git
+exec.additionalArguments=-Dgpg.passphrase\=gtshellno9
+completedPhase=run-preparation-goals
