--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,15 @@
   <groupId>com.jmeter</groupId>
   <artifactId>passfailreport-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>Jmeter PassFailReport</name>
   <description>A plugin that builds a simple report by reading Jmeter jtl result files with Maven.</description>
   <url>http://github.com/gtxtreme21/PassFailReport</url>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>  
   <licenses>
     <license>
       <name>GNU GENERAL PUBLIC LICENSE</name>
@@ -19,12 +24,12 @@
 	<developerConnection>scm:git:git@github.com:gtxtreme21/PassFailReport.git</developerConnection>
 	<url>http://github.com/gtxtreme21/PassFailReport.git</url>    
   </scm>
-  <distributionManagement>
-    <repository>
+  <distributionManagement>  
+    <site>
       <id>passfailreport-maven-plugin-repo</id>
       <name>Public Repo</name>
       <url>https://github.com/gtxtreme21/passfailreport-maven-plugin-repo</url>  
-    </repository>
+    </site>
   </distributionManagement>  
   <issueManagement>
   	<system>GitHub</system>
@@ -55,36 +60,45 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <profiles>
-	  <profile>
-	    <id>release-sign-artifacts</id>
-	    <activation>
-	      <property>
-	        <name>performRelease</name>
-	        <value>true</value>
-	      </property>
-	    </activation>  
+  
 		  <build>
 		    <plugins>
-		      <plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-gpg-plugin</artifactId>
-		        <version>2.4.1</version>
-		        <executions>
-		          <execution>
-		            <id>sign-artifacts</id>
-		            <phase>verify</phase>
-		            <goals>
-		              <goal>sign</goal>
-		            </goals>
-		            <configuration>
-		            <pomFileName>PassFailReport/pom.xml</pomFileName>
-		            </configuration>
-		          </execution>
-		        </executions>
-		      </plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+			
+				<executions>
+				
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
+			
+				<executions>
+				
+					<execution>
+						<id>attach-javadocs</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>		    
+
 		    </plugins>
 		  </build>
-	   </profile>
-  </profiles>
+
 </project>
