--- a/release.properties
+++ b/release.properties
@@ -1,6 +1,6 @@
 #release configuration
-#Thu Aug 01 16:19:01 CDT 2013
-scm.tag=passfailreport-maven-plugin-1.0
+#Thu Aug 01 18:01:40 CDT 2013
+scm.tag=1.0-SNAPSHOT
 scm.url=scm\:git\:git@github.com\:gtxtreme21/PassFailReport.git
 preparationGoals=clean verify
 project.dev.com.jmeter\:passfailreport-maven-plugin=1.1-SNAPSHOT
@@ -11,5 +11,5 @@ project.scm.com.jmeter\:passfailreport-maven-plugin.connection=scm\:git\:git@git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 project.scm.com.jmeter\:passfailreport-maven-plugin.developerConnection=scm\:git\:git@github.com\:gtxtreme21/PassFailReport.git
-exec.additionalArguments=-Dgpg.passphrase\=gtshellno9
-completedPhase=run-preparation-goals
+exec.additionalArguments=-Dgpg.passphrase\=gtshellno9 -P release-sign-artifacts
+completedPhase=generate-release-poms
